# general_task_control

./: CMakeLists.txt  CurrentPosition.cpp  MotionControl.cpp  README.md  TaskControl.cpp  WorkControl.cpp  WorkGeneral.cpp  package.xml  task_data.json
include/: CurrentPosition.h  Global.h  IotCommunicate.h  MotionBase.h  MotionControl.h  MotionGeneral.h  TaskControl.h  WorkBase.h  WorkControl.h  WorkGeneral.h
src/: IotCommunicate.cpp  MotionGeneral.cpp  main.cpp
src/assist/: MotionControlServerTest.cpp  SendTaskData.cpp
